# ai_analytics_expert

./: .gitignore  README.md  fastapi_v1.py  main.py  pyproject.toml
ai_utils/: analyzer_prompt.py
database/: database.py  db_fetch.py
